--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[[plugins]]
+package = "@netlify/plugin-nextjs"
+
 [build]
-  command = "npm run build"
-  publish = ".next"
+command = "yarn next build"
+publish = ".next"
